Added Mode Parameter for TTS Requests to allow for controlling routing behaviour
